dev-auth-server: add JWT auth to POST
